--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "generator-nm",
+  "name": "generator-nmc",
   "version": "1.1.0",
   "description": "Scaffold out a node module",
   "license": "MIT",
-  "repository": "sindresorhus/generator-nm",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
+  "repository": "natecavanaugh/generator-nmc",
+  "author": "Nate Cavanaugh",
   "engines": {
     "node": ">=0.10.0"
   },
