--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "normalize-url": "^1.2.0",
     "npm": "^2.14.1",
     "superb": "^1.1.3",
-    "yeoman-generator": "^0.18.10"
+    "underscore.string": "^3.0.3",
+    "yeoman-generator": "^0.19.2"
   },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "yeoman-assert": "^2.0.0"
   }
 }
