--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "humanize-url": "^1.0.1",
     "normalize-url": "^1.2.0",
+    "npm": "^2.14.1",
     "superb": "^1.1.3",
     "yeoman-generator": "^0.18.10"
   },
